--- a/exercise-1/exercise.ipynb
+++ b/exercise-1/exercise.ipynb
@@ -22,10 +22,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['everything',\n",
+       " 'is',\n",
+       " 'awesome',\n",
+       " 'everything',\n",
+       " 'is',\n",
+       " 'cool',\n",
+       " 'when',\n",
+       " 'you',\n",
+       " 'are',\n",
+       " 'part',\n",
+       " 'of',\n",
+       " 'a',\n",
+       " 'TEEEEAM']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lyrics = \"everything is awesome everything is cool when you are part of a TEEEEAM\"\n",
+    "words = lyrics.split()\n",
+    "words\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -40,10 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D.'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def abbreviate(str_arg):\n",
+    "        return str_arg[0].upper() + '.'\n",
+    "abbreviate('dog')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,10 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['E.', 'I.', 'A.', 'E.', 'I.', 'C.', 'W.', 'Y.', 'A.', 'P.', 'O.', 'A.', 'T.']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abbreviated_list = list(map(abbreviate, words))\n",
+    "abbreviated_list"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,10 +125,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['everything',\n",
+       " 'awesome',\n",
+       " 'everything',\n",
+       " 'cool',\n",
+       " 'when',\n",
+       " 'you',\n",
+       " 'are',\n",
+       " 'part',\n",
+       " 'TEEEEAM']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def three_or_less(str):\n",
+    "    if len(str) >= 3:\n",
+    "        return str\n",
+    "\n",
+    "list(filter(three_or_less, words))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,10 +164,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['E.', 'A.', 'E.', 'C.', 'W.', 'Y.', 'A.', 'P.', 'T.']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abbreviated_list = list(map(abbreviate, (filter(three_or_less, words))))\n",
+    "abbreviated_list"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,6 +209,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "add_if_unique() missing 1 required positional argument: 'element'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-ca64274c9547>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0ma_list\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mtest_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"a\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"b\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0madd_if_unique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: add_if_unique() missing 1 required positional argument: 'element'"
+     ]
+    }
+   ],
+   "source": [
+    "def add_if_unique(a_list, element):\n",
+    "    if element in a_list:\n",
+    "        return a_list\n",
+    "    else:\n",
+    "        a_list.append(element)\n",
+    "        return a_list\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -135,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   },
   "toc": {
    "colors": {
