--- a/exercise-2/exercise.ipynb
+++ b/exercise-2/exercise.ipynb
@@ -17,12 +17,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['aj', 'fatima', 'clair']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names = [\"aj\", \"fatima\", \"clair\"]\n",
+    "names"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -33,10 +45,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AJ', 'FATIMA', 'CLAIR']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shout = [name.upper() for name in names]\n",
+    "shout"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,10 +78,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['everything',\n",
+       " 'is',\n",
+       " 'awesome',\n",
+       " 'everything',\n",
+       " 'is',\n",
+       " 'cool',\n",
+       " 'when',\n",
+       " 'you',\n",
+       " 'are',\n",
+       " 'part',\n",
+       " 'of',\n",
+       " 'a',\n",
+       " 'TEEEEAM']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lyrics = \"everything is awesome everything is cool when you are part of a TEEEEAM\"\n",
+    "words = lyrics.split()\n",
+    "words"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,10 +119,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-22-6601f8200317>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-22-6601f8200317>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    long_words = [for word in words if len(words)>4]\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "long_words = [for word in words if len(words)>4]\n",
+    "long_words"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,10 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-18-17ac0848b130>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-18-17ac0848b130>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    initial = [word[0].upper() for every word in words if len(words) > 3]\u001b[0m\n\u001b[1;37m                                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "initial = [word[0].upper() for every word in words if len(words) > 3]\n",
+    "inital"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,16 +175,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dice_rolls =  [(d1,d2) for d1 in range(1,7) for d2 in range (1,7)]\n",
+    "dice_rolls\n",
+    "len(dice_rolls)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Use a **list comprehension** to produce a list of tuples representing the rolls on two dice that sum up to 7 OR 11."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-21-f501cd64d7c1>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-21-f501cd64d7c1>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    [(d1,d2) for (d1,d2 in dice_rolls if d1 + d2 == 7 or d1+d2 ==11]\u001b[0m\n\u001b[1;37m                                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "[(d1,d2) for (d1,d2 in dice_rolls if d1 + d2 == 7 or d1+d2 ==11]"
    ]
   },
   {
@@ -134,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   },
   "toc": {
    "colors": {
